# databrary-dev-learning

./: README.md
dumped-splices/: Context.dump-splices
dumped-splices/Action/: Route.dump-splices  Types.dump-splices
dumped-splices/Controller/: Notification.dump-splices  Paths.dump-splices
dumped-splices/EZID/: API.dump-splices  Volume.dump-splices
dumped-splices/Model/: Activity.dump-splices  Asset.dump-splices  AssetRevision.dump-splices  AssetSegment.dump-splices  AssetSlot.dump-splices  Audit.dump-splices  Authorize.dump-splices  Category.dump-splices  Citation.dump-splices  Comment.dump-splices  Container.dump-splices  Excerpt.dump-splices  Format.dump-splices  Funding.dump-splices  GeoNames.dump-splices  Ingest.dump-splices  Measure.dump-splices  Metric.dump-splices  Notification.dump-splices  ORCID.dump-splices  Party.dump-splices  Record.dump-splices  RecordSlot.dump-splices  Release.dump-splices  Slot.dump-splices  Stats.dump-splices  Tag.dump-splices  Time.dump-splices  Token.dump-splices  Transcode.dump-splices  URL.dump-splices  Volume.dump-splices  VolumeAccess.dump-splices  VolumeMetric.dump-splices  VolumeState.dump-splices
dumped-splices/Model/Asset/: Types.dump-splices
dumped-splices/Model/Audit/: Types.dump-splices
dumped-splices/Model/Authorize/: Types.dump-splices
dumped-splices/Model/Category/: Boot.dump-splices  Types.dump-splices
dumped-splices/Model/Comment/: Types.dump-splices
dumped-splices/Model/Container/: Types.dump-splices
dumped-splices/Model/Format/: Boot.dump-splices  Types.dump-splices
dumped-splices/Model/Funding/: Types.dump-splices
dumped-splices/Model/Metric/: Boot.dump-splices  Types.dump-splices
dumped-splices/Model/Notification/: Boot.dump-splices  Notice.dump-splices  Notify.dump-splices
dumped-splices/Model/Party/: Boot.dump-splices  Types.dump-splices
dumped-splices/Model/Permission/: Types.dump-splices
dumped-splices/Model/Record/: Types.dump-splices
dumped-splices/Model/Release/: Types.dump-splices
dumped-splices/Model/Slot/: Types.dump-splices
dumped-splices/Model/Tag/: Types.dump-splices
dumped-splices/Model/Token/: Types.dump-splices
dumped-splices/Model/Volume/: Boot.dump-splices  Types.dump-splices
dumped-splices/Model/VolumeAccess/: Types.dump-splices
dumped-splices/Service/: Types.dump-splices
dumped-splices/Solr/: Document.dump-splices
has-pattern/: README.md  has-pattern.cabal
has-pattern/src/: Lib.hs  Lib2.hs  Lib3.hs  Lib3th.hs  Lib4.hs  Lib4th.hs  Lib5.hs  Lib6.hs
minibrary/: README.md  minibrary.cabal  stack.yaml
minibrary/src/: Lib.hs
nix-intro/: archive-format-nar.md
nix-intro/shell-only/: builder.sh  foo.nix  readme.md
postgresql-typed-demo/: README.md  postgresql-typed-demo.cabal  stack.yaml
postgresql-typed-demo/src/: Lib.hs  Lib2.hs  Lib2th.hs  Lib3.hs  Lib4.hs
reflex-nix-haskell/hello-world/: default.nix  hello-world.nix  package.yaml
reflex-nix-haskell/hello-world-text/: default.nix  hello-world-text.cabal  hello-world-text.nix  package.yaml
web-inv-route-example/: README.md  web-inv-route-example.cabal
web-inv-route-example/src/: Lib.hs  Lib2.hs
