name:                has-pattern
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/has-pattern#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib2
                     , Lib3
                     , Lib3th
                     , Lib4
                     , Lib4th
                     , Lib5
                     , Lib6
  build-depends:       base >= 4.7 && < 5
                     , hashable
                     , mtl
                     , template-haskell
                     , th-lift
                     , bytestring
                     , utf8-string
  default-language:    Haskell2010

executable has-pattern-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , has-pattern
  default-language:    Haskell2010

test-suite has-pattern-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , has-pattern
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/has-pattern
