name:                postgresql-typed-demo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/postgresql-typed-demo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib2
                     , Lib2th
                     , Lib3
                     , Lib4
  build-depends:       base >= 4.7 && < 5
                     , postgresql-typed == 0.4.5
                     , mtl
                     , template-haskell
                     , transformers
  default-language:    Haskell2010

executable postgresql-typed-demo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , postgresql-typed-demo
  default-language:    Haskell2010

test-suite postgresql-typed-demo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , postgresql-typed-demo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/postgresql-typed-demo
